# openBISgentic

./: main.py  pyproject.toml
src/openBISgentic/: __init__.py  server.py
