[project]
name = "openBISgentic"
version = "0.1.0"
description = "MCP Server for openBIS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pybis"
]

[project.scripts]
openBISgentic = "openBISgentic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
